Refine publication data: fix authorship, update conference details, enhance category visibility

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -703,13 +703,13 @@ footer.sticky-bottom {
   }
 
   h2.category {
-    color: #000000;
+    color: #000000 !important;
     border-bottom: 1px solid var(--global-divider-color);
     padding-top: 0.5rem;
     margin-top: 2rem;
     margin-bottom: 1rem;
     text-align: right;
-    font-weight: bold;
+    font-weight: bold !important;
   }
 }
 
@@ -735,12 +735,12 @@ footer.sticky-bottom {
   }
 
   h2.bibliography {
-    color: #000000;
+    color: #000000 !important;
     border-top: 1px solid var(--global-divider-color);
     padding-top: 1rem;
     margin-top: 2rem;
     text-align: right;
-    font-weight: bold;
+    font-weight: bold !important;
   }
 
   ol.bibliography {
@@ -783,7 +783,7 @@ footer.sticky-bottom {
       }
 
       .periodical {
-        color: #000000;
+        color: #000000 !important;
         font-weight: normal;
       }
 
